# api-examples

./: CMakeLists.txt  README.md  e1-config.cpp  e2-result.cpp  e3-time.cpp  e4-receiver_callbacks.cpp  e5-acquire.cpp
config/: one_det_minimal.config  one_det_no_receiver.config
